docs: update @eddmann link to personal website
- Change footer link from GitHub profile to eddmann.com

--- a/site/index.html
+++ b/site/index.html
@@ -489,7 +489,7 @@ console.<span class="syntax-function">log</span>(<span class="syntax-variable">c
                     <a href="https://github.com/eddmann/buns" class="text-sm text-bun-cream/60 hover:text-bun-orange transition-colors">GitHub</a>
                     <a href="https://github.com/eddmann/buns/releases" class="text-sm text-bun-cream/60 hover:text-bun-orange transition-colors">Releases</a>
                     <a href="https://github.com/eddmann/buns/issues" class="text-sm text-bun-cream/60 hover:text-bun-orange transition-colors">Issues</a>
-                    <a href="https://github.com/eddmann" class="text-sm text-bun-cream/60 hover:text-bun-orange transition-colors">@eddmann</a>
+                    <a href="https://eddmann.com" class="text-sm text-bun-cream/60 hover:text-bun-orange transition-colors">@eddmann</a>
                 </div>
             </div>
         </div>
