--- a/site/index.html
+++ b/site/index.html
@@ -442,7 +442,7 @@ console.<span class="syntax-function">log</span>(<span class="syntax-variable">c
                         <span class="text-xs font-semibold text-bun-cream/70 uppercase tracking-wider">Quick Install</span>
                     </div>
                     <div class="code-block rounded-xl p-4 flex items-center justify-between">
-                        <code class="font-mono text-sm md:text-base text-bun-cream/90 break-all">curl -fsSL https://raw.githubusercontent.com/eddmann/buns/main/install.sh | sh</code>
+                        <code class="font-mono text-sm md:text-base text-bun-cream/90 overflow-hidden whitespace-nowrap block">curl -fsSL https://raw.githubusercontent.com/eddmann/buns/main/install.sh | sh</code>
                         <button onclick="copyToClipboard('curl -fsSL https://raw.githubusercontent.com/eddmann/buns/main/install.sh | sh', this)" class="copy-btn p-2 rounded-lg hover:bg-bun-warm transition-colors flex-shrink-0 ml-4" title="Copy to clipboard">
                             <svg class="w-5 h-5 text-bun-muted" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"/></svg>
                         </button>
